--- a/WildVote/src/styles.scss
+++ b/WildVote/src/styles.scss
@@ -1,6 +1,8 @@
+@use '@ngneat/hot-toast/src/styles/styles.scss';
 /* You can add global styles to this file, and also import other style files */
 body, html {
     height: 100%;
     width: 100%;
     margin: 0 !important;
   }
+
